Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-17769

Drag over bounds errors when ListView has variable height content

XMLWordPrintable

    • cb0a6844705802564c81b581f24a76c5d5adf6d1

      This bug was cloned from QTBUG-17759 to address the dragging problem.

      Run attached QML. I have C++'fied the model at http://doc.qt.nokia.com/4.7-snapshot/qml-listview.html#section.criteria-prop.

      On startup it looks like beforeclick.png (correct)
      Keep scrolling in up/down. Sometimes the view just gets stuck. scrollbug.png
      There are also warning in console:'Unable to assign undefined value'

      I have been unable to reproduce this with a QML ListElement model (i.e a C++ model is required)

        1. beforeclick.png
          beforeclick.png
          16 kB
        2. main.cpp
          2 kB
        3. main.qml
          0.6 kB
        4. scrollbug.png
          scrollbug.png
          17 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            martjone Martin Jones (closed Nokia identity) (Inactive)
            martjone Martin Jones (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes